initial experiment with html elements

--- a/index.html
+++ b/index.html
@@ -4,24 +4,39 @@
     <title>Basic HTML Elements</title>
 </head>
 <body>
-    <h1>This is heading</h1>
+    <h1>This is h1 heading &lt;h1&gt;</h1>
+    <h2>This is h2 heading &lt;h2&gt;</h2>
+    <h3>This is h3 heading &lt;h3&gt;</h3>
+    <h4>This is h4 heading &lt;h4&gt;</h4>
+    <h5>This is h5 heading &lt;h5&gt;</h5>
+    <h6>This is h6 heading &lt;h6&gt;</h6>
+
+    <hr>
+
+    <h2>Below is example of paragraph &lt;p&gt;</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt voluptate voluptatem iste praesentium unde reiciendis aut tempora quia beatae voluptates.</p>
 
-    <h2>This is h2 heading for article</h2>
+    <h2>Below is example of article &lt;article&gt;</h2>
     <article>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum rem aspernatur blanditiis, veniam voluptatibus quos eius et expedita excepturi cupiditate quo corrupti doloremque tenetur voluptas porro veritatis harum, iste earum ipsam ea praesentium ad asperiores. Doloremque placeat reiciendis voluptatibus, repudiandae nesciunt modi quisquam? Ullam est asperiores quod libero, fuga pariatur!
     </article>
 
     <hr>
-    <h2>This is h2 heading for section</h2>
+    <h2>Below is example of section &lt;section&gt;</h2>
     <section>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, facere eaque! Explicabo minus voluptas consequatur voluptate pariatur, autem animi officiis eveniet nostrum exercitationem provident tenetur. Veniam tempora saepe, accusantium consectetur animi nihil eos temporibus laudantium harum nostrum repudiandae tenetur quis nobis praesentium velit voluptate repellendus reiciendis, ipsum quia voluptatem? Earum.
     </section>
     <hr>
-    <h2>This is h2 heading for div</h2>
+    <h2>Below is example of div &lt;div&gt;</h2>
     <div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae magnam quae molestiae, hic quo quia! Porro numquam totam sunt sed, quos iste, asperiores aliquid nobis aut vitae illo, corporis perspiciatis.
     </div>
+
+    <h2>Below horizontal row is example of hr or horizontal row &lt;hr&gt;</h2>
+    <hr>
+
+    
+    
 
 </body>
 </html>
